fix: make table scrollable horizontally and not overflow any more

--- a/static/css/poole.css
+++ b/static/css/poole.css
@@ -234,6 +234,8 @@ table {
   width: 100%;
   border: 1px solid #e5e5e5;
   border-collapse: collapse;
+  overflow-x: auto;
+  display: block;
 }
 td,
 th {
